--- a/b-final.ipynb
+++ b/b-final.ipynb
@@ -87,11 +87,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi, what is your name?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " keepgrowing\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello keepgrowing!\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "print(\"Hi, what is your name?\")\n",
+    "name = input()\n",
+    "print(f\"Hello {name}!\")"
    ]
   },
   {
@@ -103,11 +127,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "print(\"How are you today?\")\n",
+    "feeling = input()\n",
+    "if 'good' in feeling:\n",
+    "\n",
+    "    print(\"i'm feeling good too\")\n",
+    "else:\n",
+    "    print(\"Sorry to hear that\")"
    ]
   },
   {
@@ -119,11 +149,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How are you today?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " Good\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm feeling good too\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "print(\"How are you today?\")\n",
+    "feeling = input()\n",
+    "if 'good' in feeling.lower():\n",
+    "    print(\"I'm feeling good too\")\n",
+    "else:\n",
+    "    print(\"Sorry to hear that\")"
    ]
   },
   {
@@ -135,11 +192,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What's you favorite color?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " green\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You like green? My favorite color is orange\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "import random\n",
+    "\n",
+    "print(\"What's you favorite color?\")\n",
+    "favcolor = input()\n",
+    "colors = ['red','orange','yellow','green','blue','indigo','purple']\n",
+    "print(f\"You like {favcolor.lower()}? My favorite color is {random.choice(colors)}\")"
    ]
   },
   {
@@ -191,11 +275,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "import time\n",
+    "\n",
+    "class Bot:\n",
+    "    \n",
+    "    wait = 1\n",
+    "    \n",
+    "    def __init__(slef):\n",
+    "        self.q = ''\n",
+    "        self.a = ''\n",
+    "        \n",
+    "    def _think(self,s):\n",
+    "        return s\n",
+    "    \n",
+    "    def run(self):\n",
+    "        time.sleep(Bot.wait)\n",
+    "        print(self.q)\n",
+    "        self.a = input()\n",
+    "        time.sleep(Bot.wait)\n",
+    "        print(self._think(self.a))"
    ]
   },
   {
@@ -214,29 +316,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class HelloBot(Bot):\n",
+    "    def __init__(self):\n",
+    "        self.q = \"Hi, what is your name?\"\n",
+    "        \n",
+    "    def _think(self,s):\n",
+    "        return f\"Hello {s}\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class GreetingBot(Bot):\n",
+    "    def __init__(self):\n",
+    "        self.q = \"How are you today?\"\n",
+    "        \n",
+    "    def _think(self,s):\n",
+    "        if 'good' in s.lower() or 'fine' in s.lower():\n",
+    "            return \"I'm feeling good too\"\n",
+    "        else:\n",
+    "            return \"Sorry to hear that\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "import random\n",
+    "\n",
+    "class FavoriteColorBot(Bot):\n",
+    "    def __init__(self):\n",
+    "        self.q = \"What's your favorite color?\"\n",
+    "        \n",
+    "    def _think(self,s):\n",
+    "        colors = ['red','orange','yellow','green','blue','indigo','purple']\n",
+    "        return f\"You like {s.lower()}? My favorite color is {random.choice(colors)}\""
    ]
   },
   {
@@ -252,11 +375,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class Garfield:\n",
+    "    \n",
+    "    def __init__(self,wait=1):\n",
+    "        Bot.wait = wait\n",
+    "        self.bots = []\n",
+    "        \n",
+    "    def add(self,bot):\n",
+    "        self.bots.append(bot)\n",
+    "        \n",
+    "    def _prompt(self,s):\n",
+    "        print(s)\n",
+    "        print()\n",
+    "        \n",
+    "    def run(self):\n",
+    "        self._prompt(\"This is Garfield dialog system. Let's talk.\")\n",
+    "        for bot in self.bots:\n",
+    "            bot.run()"
    ]
   },
   {
@@ -274,11 +413,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is Garfield dialog system. Let's talk.\n",
+      "\n",
+      "\u001b[34mHi, what is your name?\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " keepgrowing\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34mHello keepgrowing\u001b[0m\n",
+      "\u001b[34mHow are you today?\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " not very well\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34mSorry to hear that\u001b[0m\n",
+      "\u001b[34mWhat's your favorite color?\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " blue\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34mYou like blue? My favorite color is purple\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "garfield = Garfield(1)\n",
+    "garfield.add(HelloBot())\n",
+    "garfield.add(GreetingBot())\n",
+    "garfield.add(FavoriteColorBot())\n",
+    "garfield.run()"
    ]
   },
   {
@@ -320,11 +517,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "from time import sleep\n",
+    "from termcolor import colored\n",
+    "\n",
+    "class Bot:\n",
+    "    \n",
+    "    wait = 1\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.q = ''\n",
+    "        self.a =''\n",
+    "        \n",
+    "    def _think(self,s):\n",
+    "        return s\n",
+    "    \n",
+    "    def _format(self,s):\n",
+    "        return colored(s,'blue')\n",
+    "    \n",
+    "    def run(self):\n",
+    "        sleep(Bot.wait)\n",
+    "        print(self._format(self.q))\n",
+    "        self.a = input()\n",
+    "        sleep(Bot.wait)\n",
+    "        print(self._format(self._think(self.a)))"
    ]
   },
   {
@@ -352,11 +571,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "from simpleeval import simple_eval\n",
+    "\n",
+    "class CalcBot(Bot):\n",
+    "    def __init__(self):\n",
+    "        self.q = \"Through recent upgrade I can do calculation now. Input some arichmetic expression to try:\"\n",
+    "        \n",
+    "    def _think(self,s):\n",
+    "        result = simple_eval(s)\n",
+    "        return f\"Done. Result = {result}\"\n",
+    "    \n",
+    "    def run(self):\n",
+    "        sleep(Bot.wait)\n",
+    "        print(self._format(self.q))\n",
+    "        self.a = input()\n",
+    "        while self.a != \"x q exit\" and self.a != \"quit\":\n",
+    "            sleep(Bot.wait)\n",
+    "            print(self._format(self._think(self.a)))\n",
+    "            self.a = input()"
    ]
   },
   {
@@ -368,7 +604,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is Garfield dialog system. Let's talk.\n",
+      "\n",
+      "\u001b[34mHi, what is your name?\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " keepgrowing\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34mHello keepgrowing\u001b[0m\n",
+      "\u001b[34mThrough recent ungrade I can do calculation now. Input some arichmetic expression to try, input 'q' 'x' 'quit' or 'exit' to quit:\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 5+5+6\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34mDone. Result = 16\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 5*5*5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34mDone. Result = 125\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " X\n"
+     ]
+    }
+   ],
+   "source": [
+    "garfield = Garfield()\n",
+    "garfield.add(HelloBot())\n",
+    "garfield.add(CalcBot())\n",
+    "garfield.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,11 +755,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "from simpleeval import simple_eval\n",
+    "\n",
+    "class CalcBot(Bot):\n",
+    "    def __init__(self):\n",
+    "        self.q = \"Through recent ungrade I can do calculation now. Input some arichmetic expression to try, input 'q' 'x' 'quit' or 'exit' to quit:\"\n",
+    "    \n",
+    "    def _think(self,s):\n",
+    "        result = simple_eval(s)\n",
+    "        return f\"Done. Result = {result}\"\n",
+    "    \n",
+    "    def run(self):\n",
+    "        sleep(Bot.wait)\n",
+    "        print(self._format(self.q))\n",
+    "        while True:\n",
+    "            self.a = input()\n",
+    "            if self.a.lower() in ['q','x','quit','exit']:\n",
+    "                break\n",
+    "            sleep(Bot.wait)\n",
+    "            print(self._format(self._think(self.a)))"
    ]
   },
   {
@@ -460,20 +793,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "from random import choice\n",
+    "from time import sleep\n",
+    "from termcolor import colored\n",
+    "from simpleeval import simple_eval"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class Bot:\n",
+    "    \n",
+    "    wait = 1\n",
+    "    \n",
+    "    # self.runtype: run type of the bot, can be 'once' or 'looped', default to 'once'\n",
+    "    def __init__(self,runtype='once'):\n",
+    "        self.runtype = runtype\n",
+    "        self.q = ''\n",
+    "        self.a = ''\n",
+    "    \n"
    ]
   },
   {
@@ -485,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
